Move function `get_num_timeboxes_for_fixed_duration()` to `run_simulation.py`

--- a/spn_case_study/tune_inflam_repress_rate.ipynb
+++ b/spn_case_study/tune_inflam_repress_rate.ipynb
@@ -61,7 +61,8 @@
     "from spn_case_study.run_grid_search import run_experiment\n",
     "from spn_case_study.petrinet import PLACES, VARS, TRANS, TRANS_TO_PLACES\n",
     "from spn_tools.run_simulation import (plot_results, load_log,\n",
-    "    aggregate_dataset_in_timeboxes)\n",
+    "    aggregate_dataset_in_timeboxes, get_num_timeboxes_for_fixed_duration,\n",
+    "    get_max_timestamp)\n",
     "import numpy as np\n",
     "\n",
     "SAVEDIR_NAME = \"tune_inflam_repress_rate_data\"\n",
@@ -1352,24 +1353,7 @@
     "    rates[\"repress_infl\"] = f\"{repress_rate_const} * {VARS['infl_sig']} * {VARS['gr_pdn']}\"\n",
     "    return rates\n",
     "\n",
-    "def get_max_timestamp(run_to_log: dict[int, dict[str, list[Number]]]):\n",
-    "    \"\"\"\n",
-    "    Get the largest observed timestamp in the given experiment data.\n",
-    "    Assumes that all timestamps are in chronological order.\n",
-    "    \"\"\"\n",
-    "    return max(log[\"time\"][-1] for log in run_to_log.values())\n",
     "\n",
-    "def get_num_timeboxes_for_fixed_duration(\n",
-    "        run_to_log: dict[int, dict[str, list[Number]]],\n",
-    "        duration: float) -> int:\n",
-    "    \"\"\"\n",
-    "    Find the number `n` such that `aggregate_dataset_in_timeboxes`\n",
-    "    with `num_timeboxes=n` returns an aggregation in which\n",
-    "    each timebox covers approximately `duration` time.\n",
-    "    \"\"\"\n",
-    "    max_time = get_max_timestamp(run_to_log)\n",
-    "    n = round(max_time / duration)\n",
-    "    return n\n",
     "\n",
     "run_tuning_experiment()"
    ]
