Refactor heatmap-data-computation into a function

--- a/spn_case_study/main_experiment.ipynb
+++ b/spn_case_study/main_experiment.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -507,37 +507,76 @@
     }
    ],
    "source": [
-    "table = np.empty(shape=(len(CLEAVE_CONST_CHOICES), len(GBPDN_INIT_MARKING_CHOICES)))\n",
+    "def gen_table_x1_x2_neutrophils(\n",
+    "    experiments_parent_dir: str, \n",
+    "    x1_gbpdn_markings_choices: Sequence[int] = GBPDN_INIT_MARKING_CHOICES,\n",
+    "    x2_cleave_choices: Sequence[float|int] = CLEAVE_CONST_CHOICES\n",
+    "    ) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Create a table that:\n",
+    "    * Has a column for each choice the the initial markings of GbPdn (x1).\n",
+    "    * Has a row for each choice of a Gba2-GbPdn-cleave-rate-constant (x2).\n",
+    "    * The values are the average amount of neutrophils \n",
+    "        recorded after `COMPARISON_TIMESTAMP` time.\n",
+    "    Input must be a directory containing a subdirectory\n",
+    "    named 'exp_0', 'exp_1', ..., 'exp_n'\n",
+    "    for each of the `n+1` experiments that\n",
+    "    cover all possible combinations of (x1, x2) choices.\n",
     "\n",
-    "for i in range(num_combos):\n",
-    "    exp_dir = os.path.join(CONST_UNBIND_SAVE_DIR, \"x3_0__x4_0\", f\"exp_{i}\")\n",
-    "    logs, hyperparams = load_log_and_hyperparams(exp_dir)\n",
+    "    @param experiments_parent_dir: directory containing the directories\n",
+    "        of individual experiments.\n",
+    "    @type experiments_parent_dir: str\n",
     "\n",
-    "    num_timeboxes = get_num_timeboxes_for_fixed_duration(logs, \n",
-    "        DESIRED_TIMEBOX_DURATION)\n",
+    "    @param x1_gbpdn_markings_choices: all the values for the\n",
+    "        initial amount of tokens (x1) that were used in\n",
+    "        the experiments.\n",
+    "    @type x1_gbpdn_markings_choices: Sequence[int]\n",
     "\n",
-    "    agg_logs, timebox_duration = aggregate_dataset_in_timeboxes(\n",
-    "        logs, x_var=\"time\",\n",
-    "        y_vars=[\"neutrophil_inflaming\", \"gr_pdn\", \"pdn\"], \n",
-    "        num_timeboxes=num_timeboxes)\n",
+    "    @param x2_cleave_choices: all the values for the\n",
+    "        Gba2-GbPdn-cleave-rate-constant (x2) that were used in\n",
+    "        the experiments.\n",
+    "    @type x2_cleave_choices: Sequence[float | int]\n",
     "\n",
-    "    time_vect = [timebox_duration*t for t in range(num_timeboxes)]\n",
-    "    timebox_idx = 0\n",
-    "    while time_vect[timebox_idx] < COMPARISON_TIMESTAMP:\n",
-    "        timebox_idx += 1\n",
+    "    @return np.ndarray: table of floats,\n",
+    "        with `len(x2_cleave_choices)` rows,\n",
+    "        and `len(x1_gbpdn_markings_choices)` columns\n",
+    "        (as described above).\n",
+    "    \"\"\"\n",
     "\n",
-    "    gbpdn_init_markings = hyperparams[\"gbpdn\"]\n",
-    "    cleaving_rate_const = strip_prefix_number_from_string(hyperparams[\"cleave\"])\n",
+    "    table = np.empty(shape=(len(x2_cleave_choices), len(x1_gbpdn_markings_choices)))\n",
     "\n",
-    "    row_idx = CLEAVE_CONST_CHOICES.index(eval(cleaving_rate_const))\n",
-    "    col_idx = GBPDN_INIT_MARKING_CHOICES.index(gbpdn_init_markings)\n",
+    "    for i in range(num_combos):\n",
+    "        exp_dir = os.path.join(experiments_parent_dir, f\"exp_{i}\")\n",
+    "        logs, hyperparams = load_log_and_hyperparams(exp_dir)\n",
     "\n",
-    "    neutrophils_at_comparison_time = np.mean(\n",
-    "        [run_vector[timebox_idx] \n",
-    "        for run_vector in agg_logs[\"neutrophil_inflaming\"]])\n",
+    "        num_timeboxes = get_num_timeboxes_for_fixed_duration(logs, \n",
+    "            DESIRED_TIMEBOX_DURATION)\n",
     "\n",
-    "    table[row_idx, col_idx] = neutrophils_at_comparison_time\n",
+    "        agg_logs, timebox_duration = aggregate_dataset_in_timeboxes(\n",
+    "            logs, x_var=\"time\",\n",
+    "            y_vars=[\"neutrophil_inflaming\", \"gr_pdn\", \"pdn\"], \n",
+    "            num_timeboxes=num_timeboxes)\n",
     "\n",
+    "        time_vect = [timebox_duration*t for t in range(num_timeboxes)]\n",
+    "        timebox_idx = 0\n",
+    "        while time_vect[timebox_idx] < COMPARISON_TIMESTAMP:\n",
+    "            timebox_idx += 1\n",
+    "\n",
+    "        gbpdn_init_markings = hyperparams[\"gbpdn\"]\n",
+    "        cleaving_rate_const = strip_prefix_number_from_string(hyperparams[\"cleave\"])\n",
+    "\n",
+    "        row_idx = x2_cleave_choices.index(eval(cleaving_rate_const))\n",
+    "        col_idx = x1_gbpdn_markings_choices.index(gbpdn_init_markings)\n",
+    "\n",
+    "        neutrophils_at_comparison_time = np.mean(\n",
+    "            [run_vector[timebox_idx] \n",
+    "            for run_vector in agg_logs[\"neutrophil_inflaming\"]])\n",
+    "\n",
+    "        table[row_idx, col_idx] = neutrophils_at_comparison_time\n",
+    "    return table\n",
+    "\n",
+    "experiments_parent_dir = os.path.join(CONST_UNBIND_SAVE_DIR, \"x3_0__x4_0\")\n",
+    "table = gen_table_x1_x2_neutrophils(experiments_parent_dir)\n",
     "print(table)\n"
    ]
   },
