Update discussions experiment outcomes

--- a/spn_case_study/main_experiment.ipynb
+++ b/spn_case_study/main_experiment.ipynb
@@ -1299,11 +1299,17 @@
     "## Graph of the run with the strongest decay\n",
     "That is, with $x_5 = 100000$ and $x_6 = \\texttt{True}$.\n",
     "\n",
-    "You can see that a little GbPdn is initially converted,\n",
-    "then Gba2 is almost immediately decayed to 0,\n",
-    "but there is still enough Gr* to decrease the inflammation.\n",
+    "You can see that a quite some GbPdn is initially converted to Pdn, rather quickly,\n",
+    "before we run out of Gba2.\n",
+    "The total amount of Pdn/Gr* is probably less\n",
+    "than without negative feedback to Gba2,\n",
+    "but the negative feedback only occurs when Gr*\n",
+    "is high enough to suppress the inflammation\n",
+    "anyway.\n",
     "Of course, if the effect of Gr* would be weaker,\n",
-    "or if some threshold concentration is needed, then the effects may be bigger."
+    "or if some threshold concentration is needed\n",
+    "for inhibiting the inflammation (but not to inhibit Gba2), \n",
+    "then the effects may be bigger."
    ]
   },
   {
