Save figure unrepressed case automatically

--- a/spn_case_study/main_experiment.ipynb
+++ b/spn_case_study/main_experiment.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -263,10 +263,12 @@
     "                                        DESIRED_TIMEBOX_DURATION)\n",
     "x_var = \"time\"\n",
     "y_vars = [\"neutrophil_free\", \"neutrophil_inflaming\"]\n",
+    "fig, ax = plt.subplots()\n",
     "ax = plot_results(BASELINE_LOGS, x_var, y_vars, \n",
-    "             num_timeboxes, interval_type=\"min_max\")\n",
+    "             num_timeboxes, interval_type=\"min_max\", ax=ax)\n",
     "ax.set(ylabel=\"Neutrophil concentration\",\n",
-    "    title=\"Neutrophil recruitment without repression\");"
+    "    title=\"Neutrophil recruitment without repression\");\n",
+    "fig.savefig(os.path.join(MAIN_SAVE_DIR, \"unrepressed_graph.pdf\"))"
    ]
   },
   {
